--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-	background-color: #000000;
+  background-color: #ffffff;
 }
 p {
   font-size: 20px;
