--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -3,8 +3,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #ffffff;
+	background-color: #ffffff;
 }
+
+title-bar {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
 p {
   font-size: 20px;
 }
@@ -14,9 +21,10 @@ a {
 br {
   font-size: 20px;
 }
-em {
+i {
   font-size: 20px;
+	font: Arial;
 }
-strong {
+b {
   font-size: 20px;
 }
