--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -3,6 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
 	background-color: #ffffff;
 }
 
