--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -9,6 +9,9 @@ body {
 
 div {
 	background-image: url('UTDbackgroundJPEG.JPG');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 	width: 100%;
 	height: 100%;
 	display: flex;
