--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -11,9 +11,10 @@ div {
 	background-image: url('UTDbackgroundJPEG.JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: cover;
+	background-size: cover; 
+	background-size: 100% 100%;
 	width: 100%;
-	height: 100%;
+	height: 600px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -32,7 +33,6 @@ br {
 }
 i {
   font-size: 20px;
-	font-family: arial,helvetica;
 }
 b {
   font-size: 20px;
