--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -14,8 +14,11 @@ div {
 	background-size: cover; 
 	background-size: 100% 100%;
 	width: 100%;
-	height: 600px;
+	min-height: 400px;
+	height: auto;
 	display: flex;
+	align-items: flex-start;
+	align-content: center;
 	flex-direction: column;
 	justify-content: center;
 }
