--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -18,7 +18,7 @@ div {
 	height: auto;
 	display: flex;
 	align-items: flex-start;
-	align-content: center;
+	align-content: flex-start;
 	flex-direction: column;
 	justify-content: center;
 }
