--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -17,7 +17,7 @@ div {
 	min-height: 400px;
 	height: auto;
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	align-content: flex-start;
 	flex-direction: column;
 	justify-content: center;
