--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -18,9 +18,9 @@ div {
 	height: auto;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	align-content: flex-start;
 	justify-content: center;
+	align-items: center;
+	align-content: center;
 }
 
 p {
