--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -18,7 +18,7 @@ div {
 	height: auto;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	align-content: center;
 }
