--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -8,7 +8,7 @@ body {
 }
 
 div {
-	width: 100%;
+	width: 3000px;
 	min-height: 500px;
 	height: auto;
 	background-image: url('UTDbackgroundJPEG.JPG');
