--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -13,7 +13,7 @@ div {
 	min-height: 500px;
 	height: auto;
 	margin: 0px;
-	background-image: url('UTDbackgroundJPEG.JPG');
+	background-image: url('image (1).JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover; 
