--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -11,9 +11,9 @@ body {
 div {
 	width: 100%;
 	min-height: 500px;
-	height: auto;
+	height: 100%;
 	margin: 0px;
-	background-image: url('image (1).JPG');
+	background-image: url('image_(1).JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover; 
