--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -25,6 +25,12 @@ div {
 	align-content: center;
 }
 
+.blue-rectangle {
+    background-color: rgba(3,78,136,0.7);
+    padding: 10px 20px 10px 200px;
+    margin-bottom: 20px;
+}
+
 p {
   font-size: 20px;
 }
