--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -29,6 +29,7 @@ div {
     background-color: rgba(3,78,136,0.7);
     padding: 10px 20px 10px 200px;
     margin-bottom: 20px;
+	color: #ffffff;
 }
 
 p {
