--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -13,6 +13,7 @@ div {
 	min-height: 500px;
 	height: 100%;
 	margin: 0px;
+	padding: 25px;
 	background-image: url('UTDbackgroundJPEG.JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -26,10 +27,22 @@ div {
 }
 
 .blue-rectangle {
-    background-color: rgba(3,78,136,0.7);
-    padding: 10px 20px 10px 200px;
-    margin-bottom: 20px;
+	width: 250px;
+	min-height: 150px;
+	height: auto;
+	background-color: #034E88;
+	padding: 5px 10px 5px 10px;
+	border-radius: 5px;
+	font-size: 15px;
 	color: #ffffff;
+}
+
+.items-in-a-row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
 }
 
 p {
