--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -31,8 +31,9 @@ div {
 	min-height: 150px;
 	height: auto;
 	background-color: #034E88;
+	margin: 10px;
 	padding: 5px 10px 5px 10px;
-	border-radius: 5px;
+	border: 1px solid #black;
 	font-size: 15px;
 	color: #ffffff;
 }
