--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -14,11 +14,13 @@ div {
 	height: 100%;
 	margin: 0px;
 	padding: 25px;
+	
 	background-image: url('UTDbackgroundJPEG.JPG');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover; 
 	background-size: 100% 100%;
+	
 	display: flex;
 	flex-direction: column;
 	justify-content: initial;
@@ -33,7 +35,7 @@ div {
 	background-color: #034E88;
 	margin: 10px;
 	padding: 5px 10px 5px 10px;
-	border: 1px solid #black;
+	border: 1px solid #000000;
 	font-size: 15px;
 	color: #ffffff;
 }
