--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -32,9 +32,10 @@ div {
 	width: 250px;
 	min-height: 150px;
 	height: auto;
+	background-image: none;
 	background-color: #034E88;
 	margin: 10px;
-	padding: 5px 10px 5px 10px;
+	padding: 10px;
 	border: 1px solid #000000;
 	font-size: 15px;
 	color: #ffffff;
