--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -37,6 +37,8 @@ div {
 	margin: 10px;
 	padding: 10px;
 	border: 1px solid #000000;
+	justify-content: center;
+	align-content: center;
 	font-size: 15px;
 	color: #ffffff;
 }
