--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -28,6 +28,31 @@ div {
 	align-content: center;
 }
 
+.items-in-a-row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+}
+
+.items-in-a-row-green {
+	width: 600px;
+	min-height: 200px;
+	height: auto;
+	background-image: none;
+	background-color: #green;
+	margin: 15px;
+	padding: 25px;
+	border: 2px solid #000000;
+	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+}
+
 .blue-rectangle {
 	width: 250px;
 	min-height: 150px;
@@ -37,19 +62,25 @@ div {
 	margin: 15px;
 	padding: 10px;
 	border: 1px solid #000000;
-	border-radius: 5px;
 	justify-content: center;
 	align-content: center;
 	font-size: 15px;
 	color: #ffffff;
 }
 
-.items-in-a-row {
-	display: flex;
-	flex-direction: row;
+.orange-rectangle {
+	width: 150px;
+	min-height: 50px;
+	height: auto;
+	background-image: none;
+	background-color: #orange;
+	margin: 25px;
+	padding: 10px;
+	border: 1px solid #000000;
 	justify-content: center;
 	align-content: center;
-	align-items: center;
+	font-size: 15px;
+	color: #ffffff;
 }
 
 p {
