--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -28,6 +28,25 @@ div {
 	align-content: center;
 }
 
+.second-background {
+	width: 100%;
+	min-height: 600px;
+	height: 100%;
+	margin: 0px;
+	padding: 25px;
+	
+	background-image:url('UTDbackground2JPEG.JPG');
+	background-repeat: no-repeat;
+	background-size: cover; 
+	background-size: 100% 100%;
+	
+	display: flex;
+	flex-direction: column;
+	justify-content: initial;
+	align-items: center;
+	align-content: center;
+}
+
 .items-in-a-row {
 	display: flex;
 	flex-direction: row;
