--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -64,6 +64,7 @@ div {
 	margin: 15px;
 	padding: 25px;
 	border: 2px solid #000000;
+	border-radius: 5px;
 	
 	display: flex;
 	flex-direction: row;
@@ -81,6 +82,8 @@ div {
 	margin: 15px;
 	padding: 10px;
 	border: 1px solid #000000;
+	border-radius: 5px;
+	
 	justify-content: center;
 	align-content: center;
 	font-size: 15px;
@@ -96,6 +99,8 @@ div {
 	margin: 25px;
 	padding: 10px;
 	border: 1px solid #000000;
+	border-radius: 5px;
+	
 	justify-content: center;
 	align-content: center;
 	font-size: 15px;
