--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -60,7 +60,7 @@ div {
 	min-height: 200px;
 	height: auto;
 	background-image: none;
-	background-color: #70AD47;
+	background-color: #00B050;
 	margin: 15px;
 	padding: 25px;
 	border: 2px solid #000000;
