--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -107,6 +107,22 @@ div {
 	color: #ffffff;
 }
 
+.bottom-credits {
+	width: 100%;
+	height: 35px;
+	margin-top: 25px;
+	padding: 5px;
+	background-color: #000000;
+	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+	
+	font-size: 10px;
+	color: #ffffff;
+}
+
 p {
   font-size: 20px;
 }
