--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -110,8 +110,8 @@ div {
 .bottom-credits {
 	width: 100%;
 	height: 35px;
-	margin-top: 25px;
 	padding: 5px;
+	background-image: none;
 	background-color: #000000;
 	
 	display: flex;
