--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -109,7 +109,7 @@ div {
 
 .bottom-credits {
 	width: 100%;
-	height: 35px;
+	max-height: 35px;
 	padding: 5px;
 	background-image: none;
 	background-color: #000000;
