--- a/capitalwhoosh.css
+++ b/capitalwhoosh.css
@@ -111,6 +111,7 @@ div {
 	width: 100%;
 	max-height: 35px;
 	padding: 5px;
+	margin: 0px;
 	background-image: none;
 	background-color: #000000;
 	
