--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ a {
 .page-links {
   color: #fff;
 }
+.invest-button {
+  background-color: #3eae2a;
+  width: 150px;
+  height: 40px;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 15px;
+  color: #fff;
+  border: none;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -42,10 +52,11 @@ div {
 }
 .marquee-title {
   text-align: center;
+  align-items: center;
   font-size: 40px;
   text-decoration: wavy;
 
-  margin-bottom: 75px;
+  margin-bottom: 25px;
 }
 
 rect {
@@ -64,10 +75,12 @@ p {
   color: #000
 }
 .marquee-element {
-  width: 150px;
-  height: 125px;
-  margin: 10px;
+  width: 160px;
+  height: 50px;
+  margin: 5px;
   background-color: #ff9900;
+  color: #fff;
+  text-align: center;
 }
 
 marquee {
